Remove erroneous comment in last e2e test. Fix broken layout by applying minimal styling to new welcome-message element.

--- a/src/app/stylesheets/welcome-message.component.css
+++ b/src/app/stylesheets/welcome-message.component.css
@@ -1,3 +1,6 @@
 #welcome-message {
-  height: 50px;
+  border: 1px dashed red;
+  position: absolute;
+  right: 300px;
+  top: 200px;
 }
